--- a/ass34/index.html
+++ b/ass34/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <script src="script.js"></script> 
+    <script src="script.js"></script> 
+
+   <label for="">number1</label>
+   <input  id="num1" type="text">
+   <label for="">number2</label>
+   <input  id="num2"type="text">
+   <label for="">opertaion</label>
+   <input id="operation" type="text">
+
+   <button onclick="calculate()">result</button>
+
+   <div id="result"></div>
 </body>
 </html>
