--- a/ass32/index.html
+++ b/ass32/index.html
@@ -9,212 +9,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <!-- <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)"/>
-    <link rel="stylesheet" href="ligth.css" media="(prefers-color-scheme: light)" /> -->
+<link rel="stylesheet" href="style.css">
+   
     <style>
-      *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      .LIVE {
-        border: 1px solid red;
-      }
-      .logo {
-        width: 100px;
-      }
-      .flex-row {
-        margin-top: 30px;
-        display: flex;
-        flex-direction: row;
-        justify-content:space-between;
-        align-items: center;
-        flex-wrap: wrap;
-      }
-      .background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-}      .background2 {
-    position: sticky;
-    top: 0;
-    left: 0;
-    /* object-fit: fill; */
-
-   width: 100%;
-    z-index: -1;
-}
-h1{
-    font-size: 100px;
-
-}
-.content {
-    position: relative;
-    z-index: 1;
-    text-align: start;
-    font-size: 20px;
-    padding: 20px;
-    margin-bottom: 100px;
-}.content2 {
-    color: white;
-display: flex;
-flex-direction: column;
-justify-content: end;
-    position: absolute;
-    z-index: 1;
-    text-align: start;
-    /* font-size: 20px; */
-    padding: 20px;
-    margin-bottom: 100px;
-    z-index: 1;
-}.content3 {
-    color: white;
-display: flex;
-flex-direction: column;
-justify-content: start;
-    position: absolute;
-    z-index: 1;
-    text-align: start;
-    /* font-size: 20px; */
-    padding: 20px;
-    margin-bottom: 100px;
-}
-.card{
-    background-color: rgba(239, 229, 229, 0.5);
-}
-.grid{
-gap: 100px;
-    margin-top: 50px;
-    display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr ;
-  grid-template-rows: 1fr 1fr;
-}
-/* .grid2{
-    margin-top: 50px;
-    display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr ;
-  grid-template-rows: 1fr;
-} */
-.grid3{
-    margin-top: 50px;
-    display: grid;
-  grid-template-columns: 1fr 1fr 1fr  ;
-  grid-template-rows: 1fr 1fr ;
-}
-.child1{
-    grid-row: 1/3;
-    grid-column: 1/3;
-}.child2{
-    grid-row: 1/3;
-    grid-column: 3/4;
-}.child3{
-    grid-row: 1/2;
-    grid-column: 4/5;
-}.child4{
-    grid-row: 2/3;
-    grid-column: 4/5;
-}
-
-.ch1{
-    grid-row: 1/2;
-    grid-column: 1/2;
-}
-.ch2{
-  grid-row: 2/3;
-  grid-column: 2/3;
-}
-
-.child3-1{
-  grid-row: 1/3;
-  grid-column: 1/3;
-}
-.child3-2{
-  grid-column: 3/4;
-  grid-row: 1/2;
-}
-.child3-3{
-  grid-column: 3/4;
-  grid-row: 2/3;
-}
-.article-card {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-        .article-img {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
-        .article-text {
-            flex-grow: 1;
-        }
-        .article-text h6 {
-            font-size: 12px;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            color: gray;
-        }
-        .article-text h5 {
-            font-size: 16px;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        .article-type {
-            font-size: 12px;
-            color: gray;
-        }
-        a{
-          text-decoration: none;
-          color: black;
-          font-weight: bold;
-        }
-        .flex1{
-          flex:1 1 50%;
-        }
-        img{
-          width: 100%;
-        }
-        .flex-col{
-          display: flex;
-          flex-direction: column;
-          justify-content: space-evenly;
-          align-items: start;
-         gap: 23px;
-        }
-       .margin{
-        margin-top: 100px;
-        margin-bottom: 100px;
-       }
-       footer{
-        padding: 30px;
-       }
-       .fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-}
-
-/* Add a hover effect if you want */
-.fa:hover {
-  opacity: 0.7;
-}
-
-/* Set a specific color for each brand */
-
-/* Facebook */
-.fa{
-  background: #2b2c2d;
-  color: white;
-}
+      
 
 
     </style>
@@ -319,51 +117,41 @@ gap: 100px;
 
        </div>
    
-
-    <div class="container my-4">
-      <div class="row">
-          <div class="col-md-3">
-              <div class="article-card">
-                  <img src="img1.webp" alt="NASA Rocket" class="article-img">
-                  <div class="article-text">
-                      <h6>5 MIN READ</h6>
-                      <h5>Liftoff! NASA Tech, Science En Route to Moon with Intuitive Machines</h5>
-                      <p class="article-type">📰 News Release</p>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="article-card">
-                  <img src="img2.webp" alt="NASA X-59" class="article-img">
-                  <div class="article-text">
-                      <h6>3 MIN READ</h6>
-                      <h5>NASA’s X-59 Completes Electromagnetic Testing</h5>
-                      <p class="article-type">📄 Article</p>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="article-card">
-                  <img src="img3.jpg" alt="Earth Aurora" class="article-img">
-                  <div class="article-text">
-                      <h6>5 MIN READ</h6>
-                      <h5>NASA’s EZIE Launching to Study Magnetic Fingerprints of Earth’s Aurora</h5>
-                      <p class="article-type">📄 Article</p>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-3">
-              <div class="article-card">
-                  <img src="img4.webp" alt="Asteroid" class="article-img">
-                  <div class="article-text">
-                      <h6>3 MIN READ</h6>
-                      <h5>NASA’s Lucy Spacecraft Takes Its 1st Images of Asteroid Donaldjohanson</h5>
-                      <p class="article-type">📄 Article</p>
-                  </div>
-              </div>
-          </div>
-      </div>
+<div class="row">
+  <div class="flex col-lg-3 col-md-6 col-xm-12">
+    <div class="flex1"><img class="radius" src="img1.webp" alt=""></div>
+    <div  class="flex3">
+      <h6>5 MIN READ</h6>
+      <h5>Liftoff! NASA Tech, Science En Route to Moon with Intuitive Machines</h5>
+      <p >News Release</p>
+    </div>
   </div>
+  <div class="flex col-lg-3 col-md-6 col-xm-12">
+    <div class="flex1"><img class="radius" src="img2.webp" alt=""></div>
+    <div  class="flex3">
+      <h6>3 MIN READ</h6>
+      <h5>NASA’s X-59 Completes Electromagnetic Testing</h5>
+      <p >Article</p>
+    </div>
+  </div>
+  <div class="flex col-lg-3 col-md-6 col-xm-12">
+    <div class="flex1"><img class="radius" src="img3.jpg" alt=""></div>
+    <div  class="flex3">
+      <h6>5 MIN READ</h6>
+      <h5>NASA’s EZIE Launching to Study Magnetic Fingerprints of Earth’s Aurora</h5>
+      <p >Article</p>
+    </div>
+  </div>
+  <div class="flex col-lg-3 col-md-6 col-xm-12">
+    <div class="flex1"><img class="radius" src="img4.webp" alt=""></div>
+    <div  class="flex3">
+      <h6>3 MIN READ</h6>
+      <h5>NASA’s Lucy Spacecraft Takes Its 1st Images of Asteroid Donaldjohanson</h5>
+      <p >Article</p>
+    </div>
+  </div>
+  </div>
+   
   <img src="one.png" alt="">
   <!-- section three -->
 <div>
