--- a/ass32/index.html
+++ b/ass32/index.html
@@ -62,7 +62,7 @@
         <div>Carrying NASA science and technology to the Moon, Firefly Aerospace's lunar lander,</br> Blue Ghost, touched down on the lunar surface at 3:34 a.m. EST on Sunday, March 2.</div>
         <button type="button" class="btn btn-danger">Mission Updates</button>
        <div class="flex-row">
-        <div class="card text-center blue">
+        <div class="card text-center ">
             <div class="card-body">
               <h6 class="card-title">STUDYING MARE CRISIUM</h6>
               <p class="card-text">
@@ -70,7 +70,7 @@
               </p>
             </div>
           </div>
-          <div class="card text-center blue">
+          <div class="card text-center ">
             <div class="card-body">
               <h6 class="card-title">COMMERCIAL PARTNERS</h6>
               <p class="card-text">
@@ -78,7 +78,7 @@
               </p>
             </div>
           </div>
-          <div class="card text-center blue">
+          <div class="card text-center ">
             <div class="card-body">
               <h6 class="card-title">SCIENCE, DELIVERED</h6>
               <p class="card-text">
@@ -101,7 +101,8 @@
         <div class="col-lg-6 col-md-6 col-xm-12">
 
           <div class="row">
-            <div class="col-lg-6 col-md-6 col-xm-12">          <img src="image2.png" alt="">
+            <div class="col-lg-6 col-md-6 col-xm-12">         
+               <img src="image2.png" alt="">
             </div>
             <div class="col-lg-6 col-md-6 col-xm-12">
               <img src="image3.png" alt="">
@@ -162,7 +163,7 @@
 </div>
 </div>
 <!-- section4 -->
- <img src="Earh.png" alt="">
+ <img class="margin" src="Earh.png" alt="">
  <!-- section5 -->
 <div class="row">
   <div class="col-lg-6  col-md-6 col-xm-12 flex-col">
@@ -204,7 +205,7 @@
     </div>
     <div class="fw-bold">Sun Gallery</div>
   </div>
- 
+</div>
   <!-- section -->
    <div>
     <img class="margin" src="i.png" alt="">
