--- a/Mid term project/index.html
+++ b/Mid term project/index.html
@@ -22,7 +22,7 @@
       
         
       <div >
-        <form action="" onsubmit="return successfulalert(), saveData(),reset()" >
+        <form onsubmit="return successfulalert(), saveData(),reset()" >
           <div class="main_form">
            <div>
                <label for="email">Email :</label>
