--- a/Mid term project/index.html
+++ b/Mid term project/index.html
@@ -24,7 +24,7 @@
       <section >
            
       <div >
-        <form  onsubmit="return  saveData() ,reset();"  >
+        <form  onsubmit="return  saveData()"  >
           <!--
           
           //id="userForm" for not default and show first data-bs-target
